# HomeHarvest

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: DEMO_VIDEO_GUIDE.md
