[tool.poetry]
name = "homeharvest"
version = "0.8.18"
description = "Python library for collecting and structuring real-estate listing data"
authors = ["Zachary Hampton <zachary@bunsly.com>", "Cullen Watson <cullen@bunsly.com>"]
homepage = "https://github.com/abubakarshahid16/HomeHarvest"
repository = "https://github.com/abubakarshahid16/HomeHarvest"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.4"
pandas = "^2.3.1"
pydantic = "^2.11.7"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
